--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,16 +13,34 @@
 		background: #2c3d51;
 		color: #ddd;
 		padding-right: 85px;
+		padding-left: 75px;
 		text-transform: uppercase;
 		@extend %clr;
 		font-size: 11px;
 		a{
 			text-decoration: none;
 		}
+		@include respond-to(step1){
+			height: auto;
+			padding-right: 20px;
+			padding-left: 20px;
+		}
 	}
 		.header__nav{
 			float: left;
-			margin-left: 75px;
+			select{
+				display: none;
+				outline: 0;
+				text-transform: none;
+				@include respond-to(step1){
+					display: inline-block;
+				}
+			}
+			ul{
+				@include respond-to(step1){
+					display: none;
+				}
+			}
 			li{
 				display: inline-block;
 				&.active{
@@ -45,6 +63,9 @@
 		}
 		.header__profile{
 			float: right;
+			@include respond-to(step1){
+				float: right;
+			}
 			li{
 				display: inline-block;
 				margin-left: 10px;
@@ -67,12 +88,18 @@
 	.header__content{
 		@extend %clr;
 		padding: 25px 50px 37px 70px;
+		@include respond-to(step1){
+			padding: 20px;
+		}
 	}
 		.logo{
 			float: left;
 			margin-right: 13px;
 			margin-top: -5px;
 			line-height: 1;
+			@include respond-to(step1){
+				margin-bottom: 10px;
+			}
 			a{
 				text-decoration: none;
 			}
@@ -108,6 +135,10 @@
 			font-size: 15px;
 			color: #2c3b53;
 			width: 760px;
+			@include respond-to(step1){
+				height: auto;
+				width: auto;
+			}
 			&:before{
 				content: "";
 				position: absolute;
@@ -118,10 +149,16 @@
 				left: -5px;
 				margin-top: -5px;
 				border-width: 5px 5px 5px 0;
+				@include respond-to(step1){
+					display: none;
+				}
 			}
 			strong{
 				font-weight: bold;
 				display: inline-block;
+				@include respond-to(step1){
+					display: none;
+				}
 			}
 			input{
 				display: inline-block;
@@ -131,6 +168,9 @@
 				font-size: 15px;
 				width: 250px;
 				margin-right: 5px;
+				@include respond-to(step1){
+					width: 92%;
+				}
 			}
 			.icon-search{
 				margin-right: 5px;
@@ -153,6 +193,12 @@
 				line-height: 40px;
 				text-transform: uppercase;
 				font-weight: bold;
+				@include respond-to(step1){
+					display: block;
+					margin-bottom: 10px;
+					left: 50%;
+					margin-left: -54px;
+				}
 			}
 
 		}
@@ -186,5 +232,8 @@
 				&.icon-pin{
 					left: -10px;
 				}
+			}
+			@include respond-to(step1){
+				display: none;
 			}
 		}
