--- a/sass/_jsp.scss
+++ b/sass/_jsp.scss
@@ -12,6 +12,9 @@
 	width: 367px;
 	outline: 0;
 	height: 100%;
+	@include respond-to(step1){
+		width: auto;
+	}
 }
 
 .jspContainer
@@ -33,6 +36,9 @@
 	width: 8px;
 	height: 100%;
 	// background: red;
+	@include respond-to(step1){
+		right: 20px;
+	}
 }
 
 .jspHorizontalBar
@@ -41,8 +47,11 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 16px;
+	height: 8px;
 	// background: red;
+	@include respond-to(step1){
+		bottom: -10px;
+	}
 }
 
 .jspVerticalBar *,
