--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -7,6 +7,9 @@
 	width: 367px;
 	z-index: 1000;
 	background: #fcfcfc;
+	@include respond-to(step1){
+		width: 100%;
+	}
 	.sidebar__wrap{
 		position: relative;
 		padding: 15px 0;
@@ -14,6 +17,10 @@
 	.sidebar__content{
 		margin-left: 84px;
 		margin-right: 15px;
+		@include respond-to(step1){
+			margin-left: 40px;
+			margin-right: 40px;
+		}
 	}
 	.sidebar-key{
 		position: absolute;
@@ -28,5 +35,8 @@
 		border: 0;
 		cursor: pointer;
 		border-radius: 0 3px 3px 0;
+		@include respond-to(step1){
+			display: none;
+		}
 	}
 }
