--- a/sass/lib/_mixins.scss
+++ b/sass/lib/_mixins.scss
@@ -1,12 +1,8 @@
-// responsive example, edit or remove
+// responsive example, needs to be edited
 $break-small: 500px;
-$break-large: 1180px;
 @mixin respond-to($media) {
-	@if $media == pda {
+	@if $media == step1 {
 		@media only screen and (max-width: $break-small) { @content; }
-	}
-	@else if $media == wide {
-		@media only screen and (min-width: $break-large) { @content; }
 	}
 }
 // retina bg
