--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -143,7 +143,7 @@
 				content: "";
 				position: absolute;
 				display: block;
-				border-style: solid;
+				border-style: outset solid solid;
 				border-color: transparent #ecf0f1 transparent transparent;
 				top: 50%;
 				left: -5px;
