--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -48,12 +48,16 @@
 					a{
 						color: #2c3b52;
 						cursor: default;
+						&:hover{
+							color: #bdc3c7;
+							cursor: pointer;
+						}
 					}
 				}
 			}
 			a{
-				color: #ddd;
-				display: block;
+				color: #bdc3c7;
+				display: inline-block;
 				height: 100%;
 				padding: 0 12px;
 				&:hover{
@@ -77,11 +81,52 @@
 					color: #fff;
 				}
 			}
-			.icon-login{
-				font-size: 14px;
-				margin-right: 5px;
-				position: relative;
-				top: -3px;
+			.header__fav{
+				span{
+					padding-left: 5px;
+				}
+				.icon-fav{
+					font-size: 13px;
+					position: relative;
+					top: -2px;
+				}
+			}
+			.header__login{
+				a{
+					color: #e5c000;
+					&.is-active{
+						color: #fff;
+					}
+				}
+				.icon-login{
+					font-size: 14px;
+					margin-right: 5px;
+					position: relative;
+					top: -3px;
+				}
+				&:hover{
+					a,.icon-login{
+						color: #fff;
+					}
+				}
+			}
+			.header__user{
+				a{
+					color: #fff;
+				}
+				.icon-user{
+					font-size: 13px;
+					color: #fff;
+					position: relative;
+					top: -2px;
+					margin-right: 5px;
+				}
+				&:hover{
+					a{color: #bdc3c7;}
+					.icon-user{
+						color: #bdc3c7;
+					}
+				}
 			}
 		}
 	//header__content
