--- a/css/screen.css
+++ b/css/screen.css
@@ -1,8 +1,8 @@
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 * { margin: 0; padding: 0; }
 
@@ -20,9 +20,9 @@ a { color: #00919e; }
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 
@@ -167,9 +167,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 .inner .out { min-height: 100%; height: auto !important; height: 100%; margin: 0 0 -142px 86px; z-index: 0; }
 @media only screen and (max-width: 500px) { .inner .out { margin: 0 20px -142px 20px; } }
@@ -223,17 +223,17 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 @font-face { font-family: 'Web Symbols'; src: url("../fonts/websymbolsligaregular.eot"); src: url("../fonts/websymbolsligaregular.eot?#iefix") format("embedded-opentype"), url("../fonts/websymbolsligaregular.woff") format("woff"), url("../fonts/websymbolsligaregular.ttf") format("truetype"), url("../fonts/websymbolsligaregular.svg#websymbols") format("svg"); font-weight: normal; font-style: normal; }
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 .header { position: relative; background: #fff; z-index: 1000; }
 
@@ -249,8 +249,12 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 .header__nav li.active { background: #fff; }
 .header__nav li.active a { color: #2c3b52; cursor: default; }
 .header__nav li.active a:hover { color: #bdc3c7; cursor: pointer; }
-.header__nav a { color: #bdc3c7; display: inline-block; height: 100%; padding: 0 12px; }
+.header__nav a { float: left; color: #bdc3c7; display: inline-block; height: 100%; padding: 0 12px; }
 .header__nav a:hover { color: #fff; }
+
+.mark-white { display: inline-block; }
+
+.header__mail { float: right; }
 
 .header__profile { float: right; }
 @media only screen and (max-width: 500px) { .header__profile { float: right; } }
@@ -301,9 +305,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 .footer { margin-top: 20px; width: 260px; color: #7f8c8d; font-size: 13px; }
 .footer a { color: #7f8c8d; }
@@ -314,9 +318,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 .sidebar { float: left; position: relative; width: 367px; z-index: 1000; background: #fcfcfc; }
 @media only screen and (max-width: 500px) { .sidebar { width: 100%; } }
@@ -328,9 +332,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 /* CSS Styles that are needed by jScrollPane for it to operate correctly.  Include this stylesheet in your site or copy and paste the styles below into your stylesheet - jScrollPane may not operate correctly without them. */
 .scroll-pane { width: 367px; outline: 0; height: 100%; }
@@ -376,9 +380,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 .pin { z-index: 1000; display: inline-block; text-decoration: none; }
 .pin span { position: relative; padding: 7px 12px; background: #277eba; color: #fff; cursor: pointer; display: block; }
@@ -434,9 +438,9 @@ input:focus { border: 1px solid #287ebb; border-color: rgba(82, 168, 236, 0.8); 
 
 .icon-2gis { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.inner .header, .header__topper, .header__content { *zoom: 1; }
-.inner .header:before, .header__topper:before, .header__content:before, .inner .header:after, .header__topper:after, .header__content:after { content: " "; display: table; }
-.inner .header:after, .header__topper:after, .header__content:after { clear: both; }
+.inner .header, .header__topper, .header__nav li, .header__content { *zoom: 1; }
+.inner .header:before, .header__topper:before, .header__nav li:before, .header__content:before, .inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { content: " "; display: table; }
+.inner .header:after, .header__topper:after, .header__nav li:after, .header__content:after { clear: both; }
 
 /* default layout */
 .l { position: relative; width: 100%; display: inline-block; margin-bottom: 50px; }
