--- a/sass/_inner.scss
+++ b/sass/_inner.scss
@@ -225,7 +225,7 @@
 		margin-right: 6px;
 		margin-top: -6px;
 		font-size: 20px;
-		@include transition(all linear 0.2s);
+		// @include transition(all linear 0.2s);
 	}
 	.socials__fb{
 		a{
