--- a/sass/_popups.scss
+++ b/sass/_popups.scss
@@ -135,7 +135,7 @@
 			}
 		}
 		.icon{
-			@include transition(all linear 0.2s);
+			// @include transition(all linear 0.2s);
 			&:hover{
 				color: #7f8c8d;
 			}
